# QCG-QuantumLauncher

./: .gitignore  CHANGES.md  README.md  __init__.py  algorithms.py  analyzer.py  atos.py  backends.py  job_shop_scheduler.py  orca.py  problems.py  pyproject.toml  quantum_launcher.py  quantum_launchers.py  requirements.txt  templates.py  test.py  testing_dwave.py  testing_qiskit.py  utils.py
aql/: __init__.py  aql.py
atos_routines/: __init__.py  algorithms.py  backend.py  basic_problems.py
atos_stuff/: __init__.py  algorithms.py  atos_templates.py  backend.py  basic_problems.py  launcher.py
base/: __init__.py  adapter_structure.py  base.py  qlauncher.py  templates.py
data/qatm/: CM_RCP_3.txt  CM_RCP_4.txt  CM_RCP_5.txt  CM_RCP_mid_big.txt  CM_RCP_mid_small.txt  aircrafts_RCP_3.txt  aircrafts_RCP_4.txt  aircrafts_RCP_5.txt  aircrafts_RCP_mid_big.txt  aircrafts_RCP_mid_small.txt
docs/source/: conf.py  index.rst
dwave_routines/: __init__.py  algorithms.py  backend.py  basic_problems.py  dwave_templates.py
examples/: aql_example.py  atos_example.py  dwave_example.py  monitoring_example.py  orca_example.py  profiling_example.py  qiskit_example.py
jssp/: Binary.py  pyqubo_scheduler.py  qiskit_scheduler.py  scheduler.py
orca_routines/: __init__.py  algorithms.py  backend.py  basic_problems.py  orca_templates.py
orca_stuff/: __init__.py  algorithms.py  backend.py  basic_problems.py  launcher.py  orca_templates.py
problems/: __init__.py  ec.py  jssp.py  maxcut.py  qatm.py  raw.py
qiskit_routines/: __init__.py  algorithms.py  backend.py  basic_problems.py  qiskit_template.py
qiskit_stuff/: __init__.py  algorithms.py  backend.py  basic_problems.py  launcher.py  primitive_strategy.py  qiskit_template.py  qiskit_templates.py  templates.py
quantum_launcher/: __init__.py  utils.py
quantum_launcher/aql/: __init__.py
quantum_launcher/base/: __init__.py  adapter_structure.py  base.py  qlauncher.py  (+1 more)
tests/: test_utils.py
(+52 files in other folders)
