[tool.poetry]
name = "quantum_launcher"
version = "1.1"
authors = ["Dawid Siera <dsiera@man.poznan.pl>"]
description = "Quantum Launcher is modular tool, for solving many problems on many algorithms using many quantum computing backends"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
numpy = "^2.0"
pandas = "^2.0"

[tool.poetry.extras]
qiskit = ["qiskit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
